# jakalib

./: CMakeLists.txt  LICENSE  README.md  VERSIONS
include/: string.h  type_traits.h
include/impl/: invoke.hpp  type_traits.hpp
include/jakalib/: in_place.hpp  lib.hpp  math.h  memory.h  optional.h  span.h  type_traits.h  variant.h
include/jakalib/impl/: in_place.h  variant_lib.h
test/: CMakeLists.txt  container_size_test.cpp  inclusion_test.cpp  is_detected_test.cpp  math_test.cpp  optional_test.cpp  span_test.cpp  variant_test.cpp
